horizontal scroll fixed

--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -6,4 +6,6 @@
 body {
 	position: relative;
 	height: 100vh;
+	overflow-x: hidden; 
+	overflow-y: scroll;
 }
