--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 #home {
   color: black;
-  height: 70vh;
+  height: 100vh;
   margin: auto;
   p {
     margin-top: 1.5em;
